[package]
name = "PlayBridge"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
image = "0.25.2"
open = "5.3.0"
once_cell = "1.20.1"
spin_sleep = "1.2.1"
windows = {version = "0.57.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_Xps", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"]}